# HTT

./: .gitignore  Doxyfile  README.md  jporta.sh  uml.uxf
HTT/: Basic.h  CMakeLists.txt  DataPlan.h  MobiNet.h  Provider.h  Serializable.h  SmsMax.h  String.h  Vector.h  main.cpp
mock_data/: clients.txt  usages.txt
src/: Basic.cpp  Basic.h  CMakeLists.txt  Client.cpp  Client.h  DataPlan.cpp  DataPlan.h  DataPlanFactory.cpp  DataPlanFactory.h  DataUsage.cpp  DataUsage.h  MobiNet.cpp  MobiNet.h  Provider.cpp  Provider.h  Serializable.h  SmsMax.cpp  SmsMax.h  String.cpp  String.h  Vector.hpp  gtest_lite.h  main.cpp  test.cpp  test.h  utils.hpp
src/billing/: BillingStrategy.hpp  DynamicBilling.hpp  FixedBilling.hpp  MultiLevelBilling.hpp
src/plan/: AllInMax.cpp  AllInMax.h  Basic.cpp  Basic.h  Plan.cpp  Plan.h  PlanFactory.cpp  PlanFactory.h  ZoomerNet.cpp  ZoomerNet.h
src/utils/: String.cpp  String.h  Vector.hpp  utils.hpp
